--- a/2_Project/images/2_Skills_Count.ipynb
+++ b/2_Project/images/2_Skills_Count.ipynb
@@ -17,10 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "01235af6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/python_course/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing Libraries\n",
     "import ast\n",
@@ -39,8 +48,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "69add688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_US = df[df['job_country'] == 'United States']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "37255b6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>job_skills</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Senior Clinical Data Engineer / Principal Clin...</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LEAD ENGINEER - PRINCIPAL ANALYST - PRINCIPAL ...</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LEAD ENGINEER - PRINCIPAL ANALYST - PRINCIPAL ...</td>\n",
+       "      <td>c++</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LEAD ENGINEER - PRINCIPAL ANALYST - PRINCIPAL ...</td>\n",
+       "      <td>java</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LEAD ENGINEER - PRINCIPAL ANALYST - PRINCIPAL ...</td>\n",
+       "      <td>matlab</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785692</th>\n",
+       "      <td>Data Scientist- Hybrid Work Location</td>\n",
+       "      <td>r</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785703</th>\n",
+       "      <td>Data Analyst - CRYPTOGRAPHY - Full-time</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785705</th>\n",
+       "      <td>Expert Business Data Analyst - Now Hiring</td>\n",
+       "      <td>sql</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785705</th>\n",
+       "      <td>Expert Business Data Analyst - Now Hiring</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785705</th>\n",
+       "      <td>Expert Business Data Analyst - Now Hiring</td>\n",
+       "      <td>tableau</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1073565 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                job_title job_skills\n",
+       "0       Senior Clinical Data Engineer / Principal Clin...       None\n",
+       "3       LEAD ENGINEER - PRINCIPAL ANALYST - PRINCIPAL ...     python\n",
+       "3       LEAD ENGINEER - PRINCIPAL ANALYST - PRINCIPAL ...        c++\n",
+       "3       LEAD ENGINEER - PRINCIPAL ANALYST - PRINCIPAL ...       java\n",
+       "3       LEAD ENGINEER - PRINCIPAL ANALYST - PRINCIPAL ...     matlab\n",
+       "...                                                   ...        ...\n",
+       "785692               Data Scientist- Hybrid Work Location          r\n",
+       "785703            Data Analyst - CRYPTOGRAPHY - Full-time       None\n",
+       "785705          Expert Business Data Analyst - Now Hiring        sql\n",
+       "785705          Expert Business Data Analyst - Now Hiring     python\n",
+       "785705          Expert Business Data Analyst - Now Hiring    tableau\n",
+       "\n",
+       "[1073565 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_skills = df_US.explode('job_skills')\n",
+    "\n",
+    "df_skills[['job_title', 'job_skills']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5e5a96c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_skills  job_title_short          \n",
+       "airflow     Business Analyst               38\n",
+       "            Cloud Engineer                 27\n",
+       "            Data Analyst                  387\n",
+       "            Data Engineer                4716\n",
+       "            Data Scientist               1166\n",
+       "                                         ... \n",
+       "zoom        Machine Learning Engineer       5\n",
+       "            Senior Data Analyst            50\n",
+       "            Senior Data Engineer           30\n",
+       "            Senior Data Scientist          25\n",
+       "            Software Engineer              16\n",
+       "Length: 1870, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_skill_count = df_skills.groupby(['job_skills', 'job_title_short']).size()\n",
+    "\n",
+    "df_skill_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30bc160a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -53,7 +227,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
