--- a/2_Project/WIP/4_Salary_Analysis.ipynb
+++ b/2_Project/WIP/4_Salary_Analysis.ipynb
@@ -504,9 +504,271 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "943fb098",
+   "metadata": {},
+   "source": [
+    "# Investigate Median Salary vs Skills for Data Analysts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f35b9cb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_DA_US = df[(df['job_title_short'] == 'Data Analyst') & (df['job_country'] == 'United States')].copy()\n",
+    "\n",
+    "df_DA_US = df_DA_US.dropna(subset='salary_year_avg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "78e3a7c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary_year_avg</th>\n",
+       "      <th>job_skills</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>89000.0</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>89000.0</td>\n",
+       "      <td>r</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>89000.0</td>\n",
+       "      <td>alteryx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>89000.0</td>\n",
+       "      <td>tableau</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>90250.0</td>\n",
+       "      <td>excel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>90250.0</td>\n",
+       "      <td>powerpoint</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>133285.0</td>\n",
+       "      <td>sql</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>133285.0</td>\n",
+       "      <td>word</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>133285.0</td>\n",
+       "      <td>excel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>133285.0</td>\n",
+       "      <td>visio</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     salary_year_avg  job_skills\n",
+       "109          89000.0      python\n",
+       "109          89000.0           r\n",
+       "109          89000.0     alteryx\n",
+       "109          89000.0     tableau\n",
+       "180          90250.0       excel\n",
+       "180          90250.0  powerpoint\n",
+       "410         133285.0         sql\n",
+       "410         133285.0        word\n",
+       "410         133285.0       excel\n",
+       "410         133285.0       visio"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_DA_US = df_DA_US.explode('job_skills')\n",
+    "\n",
+    "df_DA_US[['salary_year_avg', 'job_skills']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c8add347",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_DA_top_pay = df_DA_US.groupby('job_skills')['salary_year_avg'].agg(['count', 'median']).sort_values(by='median', ascending=False)\n",
+    "\n",
+    "df_DA_top_pay = df_DA_top_pay.head(10) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6e7cebcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>job_skills</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>python</th>\n",
+       "      <td>1431</td>\n",
+       "      <td>97500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tableau</th>\n",
+       "      <td>1364</td>\n",
+       "      <td>92875.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r</th>\n",
+       "      <td>893</td>\n",
+       "      <td>92500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sql server</th>\n",
+       "      <td>286</td>\n",
+       "      <td>92500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sql</th>\n",
+       "      <td>2508</td>\n",
+       "      <td>91000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sas</th>\n",
+       "      <td>926</td>\n",
+       "      <td>90000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>power bi</th>\n",
+       "      <td>838</td>\n",
+       "      <td>90000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>powerpoint</th>\n",
+       "      <td>462</td>\n",
+       "      <td>85000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>excel</th>\n",
+       "      <td>1808</td>\n",
+       "      <td>84392.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>word</th>\n",
+       "      <td>461</td>\n",
+       "      <td>81194.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            count    median\n",
+       "job_skills                 \n",
+       "python       1431  97500.00\n",
+       "tableau      1364  92875.00\n",
+       "r             893  92500.00\n",
+       "sql server    286  92500.00\n",
+       "sql          2508  91000.00\n",
+       "sas           926  90000.00\n",
+       "power bi      838  90000.00\n",
+       "powerpoint    462  85000.00\n",
+       "excel        1808  84392.00\n",
+       "word          461  81194.75"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_DA_skills = df_DA_US.groupby('job_skills')['salary_year_avg'].agg(['count', 'median']).sort_values(by='count', ascending=False)\n",
+    "\n",
+    "df_DA_skills = df_DA_skills.head(10).sort_values(by='median', ascending=False)\n",
+    "\n",
+    "df_DA_skills"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "943fb098",
+   "id": "278acf9c",
    "metadata": {},
    "outputs": [],
    "source": []
