--- a/3_Project2/Skill_Salary_Delta/1_data_cleaning.ipynb
+++ b/3_Project2/Skill_Salary_Delta/1_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,12 @@
     "\n",
     "#Cleaning Data\n",
     "df['job_posted_date'] = pd.to_datetime(df['job_posted_date'])\n",
-    "df['job_skills'] = df['job_skills'].apply(lambda x: ast.literal_eval(x) if pd.notna(x) else x)"
+    "df['job_skills'] = df['job_skills'].apply(lambda x: ast.literal_eval(x) if pd.notna(x) else x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ee51ae2d",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
        "[785741 rows x 17 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7fb1d4a4",
    "metadata": {},
    "outputs": [],
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "8588d860",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "5352c2e8",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "1c3c8fa9",
    "metadata": {},
    "outputs": [],
@@ -474,174 +474,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "2f16b89f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>job_title_short</th>\n",
-       "      <th>salary_year_avg</th>\n",
-       "      <th>job_skills</th>\n",
-       "      <th>job_work_from_home</th>\n",
-       "      <th>job_posted_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>Data Engineer</td>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>sql</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2023-02-21 13:29:59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>Data Engineer</td>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>python</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2023-02-21 13:29:59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>228222.0</td>\n",
-       "      <td>sql</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-07-31 13:01:18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>228222.0</td>\n",
-       "      <td>r</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-07-31 13:01:18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>228222.0</td>\n",
-       "      <td>python</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-07-31 13:01:18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>785648</th>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>221875.0</td>\n",
-       "      <td>snowflake</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-04-12 06:02:51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>785648</th>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>221875.0</td>\n",
-       "      <td>spark</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-04-12 06:02:51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>785692</th>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>157500.0</td>\n",
-       "      <td>python</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-04-21 06:02:31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>785692</th>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>157500.0</td>\n",
-       "      <td>matlab</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-04-21 06:02:31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>785692</th>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>157500.0</td>\n",
-       "      <td>r</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-04-21 06:02:31</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>84810 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       job_title_short  salary_year_avg job_skills  job_work_from_home  \\\n",
-       "92       Data Engineer         120000.0        sql                True   \n",
-       "92       Data Engineer         120000.0     python                True   \n",
-       "100     Data Scientist         228222.0        sql               False   \n",
-       "100     Data Scientist         228222.0          r               False   \n",
-       "100     Data Scientist         228222.0     python               False   \n",
-       "...                ...              ...        ...                 ...   \n",
-       "785648  Data Scientist         221875.0  snowflake               False   \n",
-       "785648  Data Scientist         221875.0      spark               False   \n",
-       "785692  Data Scientist         157500.0     python               False   \n",
-       "785692  Data Scientist         157500.0     matlab               False   \n",
-       "785692  Data Scientist         157500.0          r               False   \n",
-       "\n",
-       "           job_posted_date  \n",
-       "92     2023-02-21 13:29:59  \n",
-       "92     2023-02-21 13:29:59  \n",
-       "100    2023-07-31 13:01:18  \n",
-       "100    2023-07-31 13:01:18  \n",
-       "100    2023-07-31 13:01:18  \n",
-       "...                    ...  \n",
-       "785648 2023-04-12 06:02:51  \n",
-       "785648 2023-04-12 06:02:51  \n",
-       "785692 2023-04-21 06:02:31  \n",
-       "785692 2023-04-21 06:02:31  \n",
-       "785692 2023-04-21 06:02:31  \n",
-       "\n",
-       "[84810 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_US_jobs"
+    "df_cleaned = df_US_jobs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "eecdceaa",
    "metadata": {},
    "outputs": [
@@ -670,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "392f670a",
    "metadata": {},
    "outputs": [
@@ -756,7 +599,7 @@
        "std       41750.810874                            NaN"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,8 +610,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1e5adb93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cleaned.to_csv('cleaned_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99c873e0",
    "metadata": {},
    "outputs": [],
    "source": []
